# RobotEditor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  FaizanTest.json  INTERNSHIP_DOCUMENTATION.md  README.md  doxygen_log.txt  dynamics.cpp  dynamics.h  joint.cpp  joint.h  jsonkeys.h  kinematics.cpp  kinematics.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  robot.cpp  robot.h  testing.json  testing2.json  testing3.json  visualization.cpp  visualization.h
Resources/: dhParameters.json
RobotLib/: CMakeLists.txt  RobotLib_global.h  dhcalculator.cpp  dhcalculator.h  dynamics.cpp  dynamics.h  importvcmx.cpp  importvcmx.h  joint.cpp  joint.h  jsonkeys2.h  kinematics.cpp  kinematics.h  main.cpp  robot.cpp  robot.h  robotlib.cpp  robotlib.h  robotlib_test.cpp  robotlib_test.h
RobotLib/assimp-install/lib/pkgconfig/: assimp.pc
RobotLib/libraries/assimp/: CMakeLists.txt
RobotLib/libraries/assimp-5.4.2/test/models/glTF2/ClearCoat-glTF/: ClearCoatTest_out.glb
RobotLib/libraries/assimp-5.4.2/test/models/glTF2/simple_skin/: quad_all_out.glb
RobotLib/libraries/assimp-install/lib/: assimp-vc143-mtd.lib  zlibstaticd.lib
RobotLib/libraries/assimp/build_x64/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
RobotLib/libraries/assimp/build_x64/code/: cmake_install.cmake
RobotLib/libraries/assimp/build_x64/code/assimp.dir/Debug/: assimp-vc143-mtd.dll.recipe
RobotLib/libraries/assimp/build_x64/code/assimp.dir/Debug/assimp.tlog/: CL.13192.write.1.tlog  CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  assimp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
RobotLib/libraries/assimp/build_x64/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
RobotLib/libraries/assimp/build_x64/contrib/zlib/zlibstatic.dir/Debug/zlibstatic.tlog/: CL.10640.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  zlibstatic.lastbuildstate
RobotLib/libraries/assimp/build_x64/lib/Debug/: assimp-vc143-mtd.exp
RobotLib/libraries/assimp/build_x64/test/: cmake_install.cmake
RobotLib/libraries/assimp/build_x64/test/headercheck/: cmake_install.cmake
RobotLib/libraries/assimp/build_x64/test/unit.dir/Debug/: unit.exe.recipe
RobotLib/libraries/assimp/build_x64/test/unit.dir/Debug/unit.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  unit.lastbuildstate
RobotLib/libraries/assimp/build_x64/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
RobotLib/libraries/assimp/build_x64/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
RobotLib/libraries/assimp/build_x64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
RobotLib/libraries/assimp/build_x64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
RobotLib/libraries/assimp/contrib/poly2tri/poly2tri/common/: dll_symbol.h  shapes.h
RobotLib/libraries/assimp/test/models/PLY/: cube_out.ply
RobotLib/libraries/assimp/test/models/glTF2/BoxBadNormals-glTF-Binary/: BoxBadNormals_out.glb
RobotLib/libraries/assimp/test/models/glTF2/BoxTexcoords-glTF/: boxTexcoords.gltf_out.glb
RobotLib/libraries/assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf  BoxTextured_out.mtl
RobotLib/libraries/assimp/test/models/glTF2/BoxTextured-glTF-Embedded/: BoxTextured_out.mtl
RobotLib/libraries/assimp/test/models/glTF2/BoxTextured-glTF-pbrSpecularGlossiness/: BoxTextured_out.glb
RobotLib/libraries/assimp/test/models/glTF2/BoxWithInfinites-glTF-Binary/: BoxWithInfinites_out.glb  BoxWithInfinites_out.gltf
RobotLib/libraries/assimp/test/models/glTF2/glTF-Sample-Models/AnimatedMorphCube-glTF/: AnimatedMorphCube_out.glTF
RobotLib/libraries/assimp/test/models/glTF2/simple_skin/: quad_all_out.glb  quad_all_out.gltf  quad_four_out.glb  quad_four_out.gltf
RobotLib/libraries/miniz/: CMakeLists.txt
RobotLib/libraries/miniz-install/lib/: miniz.lib
RobotLib/libraries/miniz-install/lib/cmake/miniz/: minizTargets-debug.cmake
RobotLib/miniz-install/lib/cmake/miniz/: minizTargets.cmake
RobotLib/miniz-install/lib/pkgconfig/: miniz.pc
RobotLib/test/robot1/: component.json  component.rsc  dhParameters.json
RobotLib/test/robot2/: component.json  component.rsc
RobotLib/test/robot3/: component.rsc
User-Guide/: mkdocs.yml
html/: 3_d_s_converter_8cpp.html  3_d_s_exporter_8cpp.html  3_d_s_exporter_8h.html  3_d_s_exporter_8h_source.html  3_d_s_helper_8h.html  3_d_s_helper_8h_source.html  3_d_s_loader_8cpp.html  3_d_s_loader_8h.html  3_d_s_loader_8h_source.html  3_m_f_types_8h.html  3_m_f_types_8h_source.html  3_m_f_xml_tags_8h.html  3_m_f_xml_tags_8h_source.html  3d__viewer_8py.html  3d__viewer__py3_8py.html  _8cmake-format_8py.html  ____init_____8py.html  _a_c_loader_8cpp.html  _a_c_loader_8h.html  _a_c_loader_8h_source.html  _a_m_f_importer_8cpp.html  _a_m_f_importer_8hpp.html  _a_m_f_importer_8hpp_source.html  _a_m_f_importer___geometry_8cpp.html  _a_m_f_importer___material_8cpp.html  _a_m_f_importer___node_8hpp.html  _a_m_f_importer___node_8hpp_source.html  _a_m_f_importer___postprocess_8cpp.html  _a_s_e_loader_8cpp.html  _a_s_e_loader_8h.html  _a_s_e_loader_8h_source.html  _a_s_e_parser_8cpp.html  _a_s_e_parser_8h.html  _a_s_e_parser_8h_source.html  _abstract_import_export_base_8cpp.html  _abstract_import_export_base_8h.html  _abstract_import_export_base_8h_source.html  _ai_anim_behavior_8java.html  _ai_animation_8java.html  _ai_blend_mode_8java.html  (+2637 more)
latex/: 3_d_s_converter_8cpp.tex  3_d_s_exporter_8cpp.tex  3_d_s_exporter_8h.tex  3_d_s_exporter_8h_source.tex  (+2612 more)
(+454 files in other folders)
